BusOne/src/objects/Site_vod__c.object
<CustomObject>
    <description>Object that contains information about the websites which host multichannel content</description>
    <fields>
        <fullName>Error_Message_vod__c</fullName>
        <description>Will be displayed if the player/content cannot be rendered.</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Indicates the Language that the Related Content should display in.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Content_vod__c</fullName>
        <description>Indicates where the Related Content Container will appear in relation to the Engage Player.</description>
        <label>Related Content</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Right_vod</fullName>
                </value>
                <value>
                    <fullName>Bottom_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_vod__c</fullName>
        <description>URL of the webpage which is hosting the Engage Player</description>
        <externalId>true</externalId>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <recordTypes>
        <fullName>Engage_vod</fullName>
        <active>true</active>
        <description>For sites which host the Engage player</description>
        <label>Engage_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>